--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -143,16 +143,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="input\Pad.cpp" />
+    <ClCompile Include="Scene\Game.cpp" />
+    <ClCompile Include="Scene\Gameover.cpp" />
     <ClCompile Include="input\Keyboard1.cpp" />
     <ClCompile Include="input\Mouse.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NextPuyo.cpp" />
     <ClCompile Include="PlayUnit.cpp" />
     <ClCompile Include="puyo\Puyo.cpp" />
     <ClCompile Include="Scene\Scenemanager.cpp" />
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="Scene\Title.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="details\Vector2.h" />
+    <ClInclude Include="input\Pad.h" />
+    <ClInclude Include="Scene\Game.h" />
+    <ClInclude Include="Scene\Gameover.h" />
     <ClInclude Include="input\Controller.h" />
     <ClInclude Include="input\Inputid.h" />
     <ClInclude Include="input\Keyboard1.h" />
@@ -164,10 +172,12 @@
     <ClInclude Include="mode\Munyon.h" />
     <ClInclude Include="mode\Puyon.h" />
     <ClInclude Include="mode\Ojamamode.h" />
+    <ClInclude Include="NextPuyo.h" />
     <ClInclude Include="PlayUnit.h" />
     <ClInclude Include="puyo\Puyo.h" />
     <ClInclude Include="Scene\Scenemanager.h" />
     <ClInclude Include="Stage.h" />
+    <ClInclude Include="Scene\Title.h" />
     <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
