--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Scene\BaseScene.cpp" />
     <ClCompile Include="input\Pad.cpp" />
     <ClCompile Include="Scene\Game.cpp" />
     <ClCompile Include="Scene\Gameover.cpp" />
@@ -157,6 +158,7 @@
     <ClCompile Include="Scene\Title.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Scene\BaseScene.h" />
     <ClInclude Include="details\Vector2.h" />
     <ClInclude Include="input\Pad.h" />
     <ClInclude Include="Scene\Game.h" />
